--- a/Sito1/style/style.css
+++ b/Sito1/style/style.css
@@ -3,6 +3,7 @@
 * {
     padding: 0;
     margin: 0;
+    font-family: 'Poppins', sans-serif;
 }
 body {
     height: auto;
@@ -10,72 +11,25 @@ body {
 
     display: flex;
     flex-direction: column;
+    background: black;
 }
-
-.landing {
-    height: calc(100vh - 100px);
-    width: 100%;
-
-    background-color: #E2CE56;
-    display: flex;
-    flex-direction: row;
+.home {
+    height: 30px;
+    background: white;
 }
-.landing .logo {
-    height: 80px;
-    position: absolute;
-
-    top: 10px;
-    left: 10px;
+.aaa {
+    width: 700px;
 }
-.landing .left,
-.landing .right {
-    height: 100vh;
-    width: 50%;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
+h3 {
+    margin-top: 100px;
+    margin-bottom: 100px;
+    color: white;
 }
-.landing .left .content {
-    width: 64%;
-    height: 40vh;
-    transform: translateX(16%);
-
-    font-family: 'Poppins', sans-serif;
-    display: flex;
-    flex-direction: column;
-    background: transparent;
+a {
+    color: white;
+    text-decoration: dotted underline;
+    cursor: crosshair;
 }
-.landing .left .content .title {
-    height: 30%;
-
-    font-size: 340%;
-    font-weight: 500;
-}
-.landing .left .content .description {
-    height: 80%;
-
-    font-size: 200%;
-    font-weight: 200;
-}
-
-.landing .right img {
-    height: 50vh;
-    transform: translateX(-20px);
-}
-
-
-.main {
-    height: auto;
-    min-height: 100px;
-    width: 100%;
-
-    background-color: #E2CE56;
-    display: flex;
-    justify-content: center;
-}
-.main .foto1 {
-    width: 60%;
+h1 {
+    color: aquamarine;
 }
