--- a/style/style.css
+++ b/style/style.css
@@ -35,6 +35,12 @@ h1 {
 table, td, th {
     border: 1px solid black;
 }
+th {
+    background-color: blueviolet;
+}
+.img2 {
+    width: 10px;
+}
 table {
     color: white;
     width: 100%;
